--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.28.1",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^6.1.19",
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
